--- a/.gitignore
+++ b/.gitignore
@@ -96,7 +96,6 @@ celerybeat-schedule
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
@@ -124,3 +123,7 @@ dmypy.json
 
 # PDDL problem filess
 pddl_files/
+snap/
+baselines/
+graphs/
+embeddings/
