Addd script for node2vec grid search
-Added script to evaluate node2vec embeddings via computing correlation
with actual distances between nodes

-Added script to automate finding the best node2vec embeddings from a bunch of
evaluation results

--- a/.env
+++ b/.env
@@ -2,5 +2,10 @@ PDDL_DIR=pddl_files
 EMBEDDINGS_DIR=embeddings
 GRAPHS_DIR=graphs
 BASELINES_DIR=baselines
+EMBEDDING_EVALUATION_DIR=embedding_evaluation
+NODE2VEC_HEURISTIC_RESULT_DIR=node2vec_heuristic_results
 
 NODE2VEC_COMMAND=snap/examples/node2vec/node2vec
+EMBEDDING_FILE={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}.emb
+EMBEDDING_EVAL_FILE={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}.json
+NODE2VEC_HEURISTIC_RESULT_FILE={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}.json
