Added custom node2vec heuristic
-Added script that creates a graph in order to automate graph generation for many problem instances
since ipyton notebooks won't work for this. Now also saves token mapping, node mapping, and goal idx
so that when we later hash states with node2vec we can figure out their index in the embedding matrix

-Changed a* search to return number of nodes expanded

-Added blind heuristic to baselines

-Made graph generation reproducible by sorting operation names, otherwise pyperplan uses set objects
to store object and action names, and printing these is not consistent

-

--- a/.env
+++ b/.env
@@ -5,6 +5,11 @@ BASELINES_DIR=baselines
 EMBEDDING_EVALUATION_DIR=embedding_evaluation
 NODE2VEC_HEURISTIC_RESULT_DIR=node2vec_heuristic_results
 
+GRAPH_FILE={problem_name}.edgelist
+TOKEN_MAPPING_FILE={problem_name}-token_mapping.p
+NODE_MAPPING_FILE={problem_name}-node_mapping.p
+GOAL_FILE={problem_name}-goal.p
+
 NODE2VEC_COMMAND=snap/examples/node2vec/node2vec
 EMBEDDING_FILE={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}.emb
 EMBEDDING_EVAL_FILE={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}.json
