--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+.idea/
 # C extensions
 *.so
 
@@ -130,3 +130,5 @@ embeddings/
 pddl_files/*
 !pddl_files/modded_transport
 embedding_evaluation/
+alex_code/*.out
+node2vec_heuristic_results/
