Added undirected option to node2vec
-Changed file naming conventions to include this option

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ NODE_MAPPING_FILE={problem_name}-node_mapping.p
 GOAL_FILE={problem_name}-goal.p
 
 NODE2VEC_COMMAND=snap/examples/node2vec/node2vec
-EMBEDDING_FILE={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}.emb
-EMBEDDING_EVAL_FILE={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}.json
-NODE2VEC_HEURISTIC_RESULT_FILE={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}.json
+NODE2VEC_FILE_PREFIX={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}~{directed}
+EMBEDDING_FILE=${NODE2VEC_FILE_PREFIX}.emb
+EMBEDDING_EVAL_FILE=${NODE2VEC_FILE_PREFIX}.json
+NODE2VEC_HEURISTIC_RESULT_FILE=${NODE2VEC_FILE_PREFIX}.json
