--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,7 @@ graphs/
 embeddings/
 pddl_files/*
 !pddl_files/modded_transport
+!pddl_files/logistics
 embedding_evaluation/
 alex_code/*.out
 node2vec_heuristic_results/
