Changed directory structure for graph storage
-There are now distinct directories for graphs that are generated to have
node2vec run on them (edge lists) and graphs generated for GNNs.

-Added incomplete script and helper functions for GNN graph generation.

--- a/.gitignore
+++ b/.gitignore
@@ -125,7 +125,8 @@ dmypy.json
 pddl_files/
 snap/
 baselines/
-graphs/
+node2vec_graphs/
+gnn_graphs/
 embeddings/
 pddl_files/*
 !pddl_files/modded_transport
