--- a/.env
+++ b/.env
@@ -1,14 +1,17 @@
 PDDL_DIR=pddl_files
 EMBEDDINGS_DIR=embeddings
-GRAPHS_DIR=graphs
+NODE2VEC_GRAPH_DIR=node2vec_graphs
+GNN_GRAPH_DIR=gnn_graphs
 BASELINES_DIR=baselines
 EMBEDDING_EVALUATION_DIR=embedding_evaluation
 NODE2VEC_HEURISTIC_RESULT_DIR=node2vec_heuristic_results
 
-GRAPH_FILE={problem_name}.edgelist
+NODE2VEC_GRAPH_FILE={problem_name}.edgelist
 TOKEN_MAPPING_FILE={problem_name}-token_mapping.p
 NODE_MAPPING_FILE={problem_name}-node_mapping.p
 GOAL_FILE={problem_name}-goal.p
+
+GNN_GRAPH_FILE={problem_name}.p
 
 NODE2VEC_COMMAND=snap/examples/node2vec/node2vec
 NODE2VEC_FILE_PREFIX={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}~{directed}
