Added working gnn regression model
-Yet to evaluate performance, though now it is clear how to put this into use
when doing an A* search with it as a heuristic

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ PDDL_DIR=pddl_files
 EMBEDDINGS_DIR=embeddings
 NODE2VEC_GRAPH_DIR=node2vec_graphs
 GNN_GRAPH_DIR=gnn_graphs
+GNN_MODEL_DIR=gnn_models
 BASELINES_DIR=baselines
 EMBEDDING_EVALUATION_DIR=embedding_evaluation
 NODE2VEC_HEURISTIC_RESULT_DIR=node2vec_heuristic_results
@@ -12,6 +13,7 @@ NODE_MAPPING_FILE={problem_name}-node_mapping.p
 GOAL_FILE={problem_name}-goal.p
 
 GNN_GRAPH_FILE={problem_name}.p
+GNN_MODEL_FILE={problem_name}.pt
 
 NODE2VEC_COMMAND=snap/examples/node2vec/node2vec
 NODE2VEC_FILE_PREFIX={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}~{directed}
