--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ GNN_MODEL_DIR=gnn_models
 BASELINES_DIR=baselines
 EMBEDDING_EVALUATION_DIR=embedding_evaluation
 NODE2VEC_HEURISTIC_RESULT_DIR=node2vec_heuristic_results
+GNN_HEURISTIC_RESULT_DIR=gnn_heuristic_results
 
 NODE2VEC_GRAPH_FILE={problem_name}.edgelist
 TOKEN_MAPPING_FILE={problem_name}-token_mapping.p
@@ -13,10 +14,12 @@ NODE_MAPPING_FILE={problem_name}-node_mapping.p
 GOAL_FILE={problem_name}-goal.p
 
 GNN_GRAPH_FILE={problem_name}.p
-GNN_MODEL_FILE={problem_name}.pt
+GNN_MODEL_FILE={problem_name}~model.pt
+GNN_STATS_FILE={problem_name}~stats.json
 
 NODE2VEC_COMMAND=snap/examples/node2vec/node2vec
 NODE2VEC_FILE_PREFIX={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}~{directed}
 EMBEDDING_FILE=${NODE2VEC_FILE_PREFIX}.emb
 EMBEDDING_EVAL_FILE=${NODE2VEC_FILE_PREFIX}.json
 NODE2VEC_HEURISTIC_RESULT_FILE=${NODE2VEC_FILE_PREFIX}.json
+GNN_HEURISTIC_RESULT_FILE={problem_name}.json
