Added hyperparams to GNN training
-This allows us to perform  some hyperparam opt

--- a/.env
+++ b/.env
@@ -14,8 +14,9 @@ NODE_MAPPING_FILE={problem_name}-node_mapping.p
 GOAL_FILE={problem_name}-goal.p
 
 GNN_GRAPH_FILE={problem_name}.p
-GNN_MODEL_FILE={problem_name}~model.pt
-GNN_STATS_FILE={problem_name}~stats.json
+GNN_MODEL_SUBDIR={problem_name}~{timestamp}
+GNN_MODEL_FILE=model.pt
+GNN_STATS_FILE=stats.json
 
 NODE2VEC_COMMAND=snap/examples/node2vec/node2vec
 NODE2VEC_FILE_PREFIX={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}~{directed}
