--- a/.env
+++ b/.env
@@ -13,14 +13,18 @@ TOKEN_MAPPING_FILE={problem_name}-token_mapping.p
 NODE_MAPPING_FILE={problem_name}-node_mapping.p
 GOAL_FILE={problem_name}-goal.p
 
-GNN_GRAPH_FILE={problem_name}.p
+GNN_GRAPH_FILE={problem_name}~{directed}.p
 GNN_MODEL_SUBDIR={problem_name}~{timestamp}
 GNN_MODEL_FILE=model.pt
 GNN_STATS_FILE=stats.json
+GNN_GOAL_FILE={problem_name}~{directed}-goal.p
+GNN_NODE_MAPPING_FILE={problem_name}~{directed}-node_mapping.p
+
+GNN_HEURISTIC_SUBDIR=${GNN_HEURISTIC_RESULT_DIR}/{problem_name}/{model_id}
 
 NODE2VEC_COMMAND=snap/examples/node2vec/node2vec
 NODE2VEC_FILE_PREFIX={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}~{directed}
 EMBEDDING_FILE=${NODE2VEC_FILE_PREFIX}.emb
 EMBEDDING_EVAL_FILE=${NODE2VEC_FILE_PREFIX}.json
 NODE2VEC_HEURISTIC_RESULT_FILE=${NODE2VEC_FILE_PREFIX}.json
-GNN_HEURISTIC_RESULT_FILE={problem_name}.json
+GNN_HEURISTIC_RESULT_FILE=result.json
