Changed how pair of states are loaded for training
-Now have control over the maximum distance between any pair
fed into the model, and a uniform amount of pairs from distance 1 to D

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ BASELINES_DIR=baselines
 EMBEDDING_EVALUATION_DIR=embedding_evaluation
 NODE2VEC_HEURISTIC_RESULT_DIR=node2vec_heuristic_results
 GNN_HEURISTIC_RESULT_DIR=gnn_heuristic_results
+GNN_HEURISTIC_TRANSFER_RESULT_DIR=gnn_heuristic_transfer_results
 
 NODE2VEC_GRAPH_FILE={problem_name}.edgelist
 TOKEN_MAPPING_FILE={problem_name}-token_mapping.p
@@ -21,6 +22,8 @@ GNN_GOAL_FILE={problem_name}~{directed}-goal.p
 GNN_NODE_MAPPING_FILE={problem_name}~{directed}-node_mapping.p
 
 GNN_HEURISTIC_SUBDIR=${GNN_HEURISTIC_RESULT_DIR}/{problem_name}/{model_id}
+GNN_HEURISTIC_TRANSFER_SUBDIR=${GNN_HEURISTIC_TRANSFER_RESULT_DIR}/{domain}/{from_problem_name}/{to_problem_name
+}/{model_id}
 
 NODE2VEC_COMMAND=snap/examples/node2vec/node2vec
 NODE2VEC_FILE_PREFIX={problem_name}~{d}~{l}~{r}~{k}~{e}~{p}~{q}~{directed}
